fix compile2,add WorkerContext.cpp V8HTMLElementWrapperFactory.h,change CMakeLists.txt

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -2693,6 +2693,7 @@ set(WebCore_SOURCES
     workers/WorkerRunLoop.cpp
     workers/WorkerScriptLoader.cpp
     workers/WorkerThread.cpp
+    workers/WorkerContext.cpp
 
     xml/DOMParser.cpp
     xml/NativeXPathNSResolver.cpp
