compile : webcore api fix

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -616,6 +616,8 @@ set(WebCore_NON_SVG_IDL_FILES
     workers/Worker.idl
     workers/WorkerGlobalScope.idl
     workers/WorkerLocation.idl
+    workers/SharedWorkerContext.idl
+    workers/WorkerContext.idl
 
     xml/DOMParser.idl
     xml/XMLHttpRequest.idl
