disable MEDIA_CONTROLS_SCRIPT

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -3061,7 +3061,7 @@ set(WebCoreTestSupport_SOURCES
 )
 
 set(WebCoreTestSupport_LIBRARIES
-    JavaScriptCore
+    #JavaScriptCore rm dependence of jsc
     WTF
     WebCore
 )
