bingdings : finished, rm all svg idl as svg disabled,add V8Int16Array.h V8Int32Array.h ... from android out

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -788,7 +788,7 @@ set(WebCore_SVG_IDL_FILES
 
 set(WebCore_IDL_FILES
     ${WebCore_NON_SVG_IDL_FILES}
-    ${WebCore_SVG_IDL_FILES}
+    #${WebCore_SVG_IDL_FILES} //CMP_ERROR_TODO disable html5 svg
 )
 
 set(WebCore_INSPECTOR_SCRIPTS_DIR "${JAVASCRIPTCORE_DIR}/inspector/scripts")
